--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>Identicon</title>
     <link rel="stylesheet" type="text/css" href="css/index.css">
     <script src="md5/md5.min.js"></script>
+    <script src="src/index.js" charset="utf-8"></script>
   </head>
 
   <body>
@@ -38,8 +39,8 @@
 
       <form id='identicon-form'>
         <div class='field'>
-          <input type='text' placeholder='Enter something...'/>
-          <input type='submit' class='btn' value="Generate" />
+          <input id="input" type='text' placeholder='Enter something...'/>
+          <input id="submit" type='submit' class='btn' value="Generate" />
         </div>
       </form>
 
